# binance-fix-connector-python

./: .gitignore  CHANGELOG.md  README.md  config.json.example  pyproject.toml
.github/workflows/: pythonpackage.yml  release.yml
benchmark/: README.md  comprehensive_analysis.py  run_analysis.sh  testnet_credentials.env.example
examples/: common.py
examples/drop_copy/: drop_copy_with_permission_check.py
examples/general/: check_fix_permissions.py  current_messages_limit_rate.py  instrument_list.py
examples/market_stream/: depth_stream.py  ticker_stream.py  trade_stream.py
examples/trade/: cancel_order.py  new_list_OTO_order.py  new_order.py  new_order_amend_keep_priority.py  new_order_cancel.py  new_order_cancel_new_order.py
src/binance_fix_connector_async/: __init__.py  fix_connector.py  utils.py
tests/: __init__.py  conftest.py  run_e2e_tests.py  test_api_permissions.py  test_base.py  test_e2e_comprehensive.py  test_e2e_drop_copy.py  test_e2e_error_recovery.py  test_e2e_framework.py  test_e2e_market_data.py  test_e2e_multi_session.py  test_e2e_order_lifecycle.py  test_examples_common.py  test_fix_connector_unit.py  test_utils_complete.py
